--- a/GestionClinique0/GestionClinique0/GestionClinique/pom.xml
+++ b/GestionClinique0/GestionClinique0/GestionClinique/pom.xml
@@ -131,6 +131,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>GetsionCliniqueIntegration</finalName>
     </build>
 
 </project>
