--- a/GestionClinique0/GestionClinique0/GestionClinique/src/main/resources/application.properties
+++ b/GestionClinique0/GestionClinique0/GestionClinique/src/main/resources/application.properties
@@ -1,17 +1,8 @@
-server.port=8081
-spring.application.name=GestionClinique
-spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/GestionClinique?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-
-#spring.mvc.view.prefix=/WEB-INF/views/
-#spring.mvc.view.suffix=.jsp
+server.port=8081
+spring.application.name=GestionClinique
 server.servlet.context-path=/
-#spring.security.user.name=admin
-#spring.security.user.password=admin
-
-
-
